Переделал по другому макету

--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -75,7 +75,8 @@
 }
 
 .about-project__time-header_green {
-    background-color: #2BE080;
+    background-color: #3456F3;
+    color: white;
   }
 
 .about-project__time-description {
