--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -1,6 +1,6 @@
 .navtab{
-    background-color: black;
-    color: white;
+    background-color: #F5F5F5;
+    color: black;
     text-align: center;
     padding: 24px 0 24px 0;
     font-size: 13px;
