--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,29 +1,31 @@
 .header{
-    background-color: #073042;
+    background-color: #DDDEE3;
 }
 .header__buttons{
     display: flex;
-    max-width: 400px;
+    width: 220px;
+    margin-left: 55px;
 }
 .header__signup{
     padding: 0;
     background: none;
     border: none;
-    color: white;
     text-decoration: none;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
     margin-top: 5px;
+    color: black;
 }
 
 .header__signin{
+    color: white;
     display: block;
     box-sizing: border-box;
-    background-color: #2BE080;
+    background-color: #3456F3;
     border-radius: 3px;
     box-shadow: none;
-    border-color: #2BE080;
+    border-color: #3456F3;
     width: 76px;
     text-align: center;
     height: 32px;
@@ -41,8 +43,8 @@
     padding: 18px 0 18px 0;
     width: 1140px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
@@ -54,11 +56,14 @@
 
 .header__button{
     text-decoration: none;
-    font-size: 14px;
+    font-size: 13px;
     line-height: 18px;
     font-weight: 400;
     color: black;
-    margin-right: 20px;
+}
+
+.header__button:first-of-type{
+    margin-right: 10px;
 }
 
 .header__button:hover{
@@ -71,15 +76,15 @@
 }
 
 .header__account-button{
-    display: flex;
     text-decoration: none;
-    width: 100px;
-    height: 32px;
+    display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
-    border-radius: 40px;
-    box-shadow: 0px 3px 14px rgba(0, 0, 0, 0.08);
-    margin-left: 30px;
+    width: 100px;
+    border-radius: 50px;
+    height: 32px;
+    border: 2px solid #AAAAAA;
 }
 
 .header__account-button:hover{
@@ -98,12 +103,9 @@
 .header__account-container{
     width: 26px;
     height: 26px;
-    border-radius: 50%;
-    background-color: #F5F5F5;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 7px;
 }
 
 .header__menu-button{
@@ -115,11 +117,14 @@
 
 .header__button_active{
     text-decoration: none;
-    font-size: 14px;
+    font-size: 13px;
     line-height: 18px;
     font-weight: 700;
     color: black;
-    margin-right: 20px;
+}
+
+.header__button_active:first-of-type{
+    margin-right: 10px;
 }
 
 .header__button_active:hover{
