--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,27 +1,34 @@
 .card{
-    width: 270px;
+    width: 364px;
+    background-color: white;
+    padding-bottom: 16px;
+    border-radius: 6px;
+    box-shadow: 0px 13px 8px 0px rgba(0, 0, 0, 0.04);
+    max-height: 275px;
 }
 
 .card__image{
     width: 100%;
-    height: 151px;
+    height: 203px;
     object-fit: cover;
     margin-top: 7px;
+    border-radius: 6px 6px 0 0;
 }
 
 .card__text{
     font-size: 13px;
     font-weight: 500;
+    margin-top: 16px 0 0 0;
 }
 
 .card__info-container{
     display: flex;
     align-items: center;
     max-width: 270px;
-    margin: 0 0 0 0;
+    margin: 0 0 2px 0;
     justify-content: space-between;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #E8E8E8;
+    margin-left: 10px;
+    margin-top: 5px;
 }
 
 .card__like{
@@ -53,8 +60,7 @@
 .card__time{
     font-size: 11px;
     font-weight: 400;
-    color: #A0A0A0;
-    margin-top: 6px;
+    margin-left: 10px;
 }
 
 @media screen and (min-width: 768px) and (max-width:1279px) {
