--- a/src/components/SearchForm/SearchFrom.css
+++ b/src/components/SearchForm/SearchFrom.css
@@ -1,16 +1,16 @@
 .search{
     max-width: 1140px;
     margin: 0 auto;
-    margin-top: 75px;
+    margin-top: 50px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    padding-bottom: 83px;
+    padding-bottom: 70px;
     border-bottom: 1px solid #E8E8E8;
 }
 
 .search__form{
-    width: 950px;
+    width: 1140px;
     height: 48px;
     border: 1px solid #E8E8E8;
     border-radius: 30px;
