Первая правки после ревью

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -58,10 +58,13 @@
 
   @media screen and (min-width: 768px) and (max-width: 1279px) {
     .footer{
-      max-width: 708px;
+      max-width: 100vw;
     }
 
     .footer__title{
+      max-width: 708px;
+    }
+    .footer__container{
       max-width: 708px;
     }
   }
@@ -77,6 +80,7 @@
       flex-direction: column-reverse;
       text-align: center;
       margin-top: 27px;
+      max-width: 300px;
 
     }
 
