--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,4 @@
 @import url(./components/Profile/Profile.css);
 @import url(./components/Preloader/Preloader.css);
 @import url(./components/NotFound/NotFound.css);
+@import url(./components/Movies/Movies.css);
