--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -23,6 +23,8 @@
     font-weight: 400;
     line-height: 17px;
     color: rgba(66, 133, 244, 1);
+    background: none;
+    border: none;
   }
   .not-found__link:hover {
     opacity: 70%;
