--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,13 +1,15 @@
 .form{
-    width: 100vw;
+    max-width: 100vw;
     height: 100vh;
     display: flex;
     padding-top: 70px;
+    border: 1px solid #000;
 }
 
 .form__container{
     max-width: 396px;
     margin: 0 auto;
+    border: 1px solid red;
 }
 
 .form__logo{
