--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,4 @@
 @import url(./components/Preloader/Preloader.css);
 @import url(./components/NotFound/NotFound.css);
 @import url(./components/Movies/Movies.css);
+@import url(./components/InfoTooltip/InfoTooltip.css);
