--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -42,6 +42,24 @@
     background-color: white ;
 }
 
+.card__delete{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    padding: 0;
+    border: none;
+    background-image: url(../../images/delete.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-right: 20px;
+    background-color: white ;
+}
+
+.card__delete:hover{
+    opacity: 0.6;
+    cursor: pointer;
+}
+
 
 .card__like_active{
     width: 30px;
